WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282311
[iPadOS] Walmart adds the wrong item color to the cart after switching colors more than once
https://bugs.webkit.org/show_bug.cgi?id=282311
Summary
[iPadOS] Walmart adds the wrong item color to the cart after switching colors...
Wenson Hsieh
Reported
2024-10-29 18:39:32 PDT
rdar://123734840
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-10-29 20:05:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35929
EWS
Comment 2
2024-10-29 22:09:39 PDT
Committed
285881@main
(2da2a5540fc4): <
https://commits.webkit.org/285881@main
> Reviewed commits have been landed. Closing PR #35929 and removing active labels.
EWS
Comment 3
2024-12-02 14:38:15 PST
Committed
283286.541@safari-7620-branch
(61b0d4b242f3): <
https://commits.webkit.org/283286.541@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2353 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug